<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="250dp"
    android:gravity="center"
    android:background="@null"
    >
    <TextView
        android:id="@+id/tv_id_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_comment"
        android:gravity="center"
        android:textSize="@dimen/tv_textsize"
        />
    <EditText
        android:id="@+id/et_id_comment"
        android:layout_margin="10dp"
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/please_comment"
        android:gravity="left"
        android:background="@drawable/rect_orange"
        />
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/tv_id_ok"
            android:padding="3dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/ok"
            android:gravity="center"
            android:background="@color/app_main_color"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_textsize"
            />
        <TextView
            android:id="@+id/tv_id_no"
            android:layout_marginLeft="5dp"
            android:padding="3dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/no"
            android:gravity="center"
            android:background="@color/app_main_color"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_textsize"
            />
    </LinearLayout>
</LinearLayout>