<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/app_main_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/nav_main"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@mipmap/ic_menu_gift" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_id_fragmentframe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/ll_id_main"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/translucent_white_a50"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_id_main"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/ic_nav_main" />

            <TextView
                android:id="@+id/tv_id_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_main"
                android:textColor="@color/black_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_id_vip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_id_vip"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/ic_nav_vip" />

            <TextView
                android:id="@+id/tv_id_vip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_vip"
                android:textColor="@color/black_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_id_recommend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_id_recommend"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/ic_nav_recommend" />

            <TextView
                android:id="@+id/tv_id_recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_recommend"
                android:textColor="@color/black_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_id_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_id_me"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/ic_nav_user" />

            <TextView
                android:id="@+id/tv_id_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_me"
                android:textColor="@color/black_1" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
