<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <SurfaceView
            android:id="@+id/sv_id_video"
            android:layout_width="match_parent"
            android:layout_height="250dp" />
        <ProgressBar
            android:id="@+id/pb_id_video"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            />
        <ImageView
            android:id="@+id/iv_id_back"
            android:layout_margin="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/left"
            />

        <RelativeLayout
            android:id="@+id/rl_id_playui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_id_titile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="唐人街探案"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="16dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <ImageView
                    android:layout_marginLeft="20dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/pause"
                    android:id="@+id/iv_id_control" />

                <TextView
                    android:id="@+id/tv_id_currenttime"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/tv_textsize_little"
                    android:text="00:00"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <SeekBar
                    android:id="@+id/sb_progress"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="1:40:51"
                    android:textSize="@dimen/tv_textsize_little"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/tv_id_long" />
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="非会员只能观看15秒，"
            android:textColor="@color/black_2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="升级VIP会员"
            android:textColor="@color/main_pink"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="即可观看完整影片"
            android:textColor="@color/black_2"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_id_title_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="唐人街探案"
        android:textStyle="bold"
        android:textSize="@dimen/tv_textsize"
        android:layout_marginLeft="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_marginLeft="15dp"
            android:id="@+id/tv_tag_timelong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_long"
            android:textColor="@color/black_1"
            />
        <TextView
            android:layout_toRightOf="@id/tv_tag_timelong"
            android:id="@+id/tv_id_timelong_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1:40:51"
            android:textColor="@color/black_1"
            />
        <TextView
            android:layout_marginRight="15dp"
            android:id="@+id/tv_id_online"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4,271"
            android:textColor="@color/black_1"
            />
        <TextView
            android:layout_toLeftOf="@+id/tv_id_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online_num"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/tv_tag_img"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:background="@color/app_main_color"
            />
        <TextView
            android:layout_toRightOf="@id/tv_tag_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot_mark"
            />
        <TextView
            android:id="@+id/tv_id_comment"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            />
        <ImageView
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tv_id_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_video_comment_n"
            />
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcl_id_hotcomment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
